# streamlit-desktop-app

./: README.md  example.py  pyproject.toml
.github/actions/build_package/: action.yml
.github/workflows/: build.yml  publish.yml  release.yml  run_tests.yml
streamlit_desktop_app/: ___init__.py  __init__.py  __main__.py  _version.py  build.py  cli.py  core.py  example.py
tests/: test_build.py  test_cli.py  test_core.py
