[tool.poetry]
name = "streamlit-desktop-app"
version = "0.1.0"
description = "Easily convert Streamlit apps into standalone desktop applications."
authors = ["ohtaman"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ohtaman/streamlit-desktop-app"
repository = "https://github.com/ohtaman/streamlit-desktop-app"
documentation = "https://github.com/ohtaman/streamlit-desktop-app#readme"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
streamlit = ">=1.13.0"
pywebview = "^5.3.2"
requests = "^2.32.3"

# Optional dependencies
[tool.poetry.extras]
pyinstaller = ["pyinstaller"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.2"
types-pyinstaller = "^6.11.0.20241028"
types-requests = "^2.32.0.20241016"
pyinstaller = "^6.11.0"


[tool.poetry.scripts]
streamlit-desktop-build = "streamlit_desktop_app.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
